--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+# hexstring private key, ex: 927c24dd1bb6xxxx
 EVM_PRIVATE_KEY=
 TRON_PRIVATE_KEY=
+# get from https://www.trongrid.io/
 TRON_GRID_API_KEY=
+# ex: redis://localhost/0
 REDIS_URL=
+# random string
 SECRET_KEY=
