✨ (env.example, README.md, main.py, networks/default.py): add support for environment variables to configure EVM, TRON, and TON networks dynamically based on provided keys 📝 (README.md): update instructions to reflect the new server command using Granian ♻️ (core/constants.py, core/core.py, core/evm/evm_flexible.py, core/ton/core.py, core/tron/tron_flexible.py): refactor code to improve readability and maintainability 🐛 (helpers/log.py): add logging functionality to capture debug information and errors 🔧 (requirements.txt, requirements.dev.txt): update dependencies to include Granian and Colorama for improved functionality ✅ (run.dev.sh): add a new script to run the application with Granian for development purposes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# environment mode
+DEBUG=False
 # hexstring private key, ex: 927c24dd1bb6xxxx
 EVM_PRIVATE_KEY=
 TRON_PRIVATE_KEY=
@@ -7,3 +9,5 @@ TRON_GRID_API_KEY=
 REDIS_URL=
 # random string
 SECRET_KEY=
+# ton mnemonic: ex: father spell impulse drastic bla bla bla
+TON_MNEMONIC=
